fixed spacing

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -20,6 +20,7 @@
 .about-center {
     display: flex;
     justify-content: center;
+    margin-top: 2.5em;
 }
 
 .about-row:after {
@@ -54,7 +55,7 @@
 }
 
 .about-photo {
-    width: 24em;
+    width: 25em;
 }
 
 .about-header {
@@ -62,8 +63,8 @@
     justify-content: flex-start;
     text-align: left;
     width: 20em;
-    font-size: 1.6em;
-    margin-top: 1.5em;
+    font-size: 2em;
+    font-weight: 500;
 
 }
 
@@ -72,6 +73,6 @@
     justify-content: flex-start;
     width: 28em;
     text-align: left;
-    margin-top: 6em;
-    font-size: 1.2em;
+    margin-top: 5em;
+    font-size: 1.4em;
 }
